# schemantic

./: .gitignore  Justfile  README.md  pyproject.toml
.github/workflows/: test.yaml
schemantic/: __init__.py  project.py
schemantic/model/: field_info.py  schematic.py
schemantic/schema/: __init__.py  abstract.py  main.py
schemantic/utils/: constant.py  misc.py  typing.py
test/: test_schema_class.py  test_schema_dataclass.py  test_schema_model.py
test/abstract/: assets.py  base.py  main.py
test/schema/: bare.py  base.py  pre_defined.py
tests/: test_schema_class.py  test_schema_dataclass.py  test_schema_model.py
tests/abstract/: base.py  main.py
tests/schema/: bare.py  base.py  pre_defined.py
